--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
-    "node": "^24.9.0"
+    "node": "^24.9.0",
+    "pg": "^8.16.3"
   }
 }
